# guanfu

./: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_docs.html  http_server.rs  lib.rs  main.rs  openapi.json  state.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/commands/: ai_commands.rs  chat_commands.rs  graph_commands.rs  metadata_commands.rs  mod.rs  paper_commands.rs  project_commands.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: annotation.rs  chat.rs  insight.rs  mod.rs  paper.rs  project.rs  relation.rs  settings.rs
src-tauri/src/services/: ai_manager.rs  crossref_client.rs  embedding_service.rs  mod.rs  paper_service.rs  pdf_text_extractor.rs  project_service.rs
src/api/: aiApi.ts  chatApi.ts  graphApi.ts  index.ts  metadataApi.ts  paperApi.ts  projectApi.ts  tauriClient.ts
src/composables/: useTheme.ts  useToast.ts
src/i18n/: en.ts  eo.ts  index.ts  sim.ts  tra.ts  zh-CN.ts  zh-TW.ts  zh-sim.ts  zh-tra.ts
src/router/: index.ts
src/stores/: chatStore.ts  graphStore.ts  index.ts  insightStore.ts  paperStore.ts  projectStore.ts  settingsStore.ts
src/styles/: globals.scss  mixins.scss  variables.scss
src/types/: annotation.ts  chat.ts  index.ts  insight.ts  paper.ts  project.ts  relation.ts  settings.ts  tauri.ts
(+23 files in other folders)
