[package]
name = "guanfu"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dirs-next = "2"
regex = "1"
urlencoding = "2"
lopdf = "0.34"
futures-util = "0.3"
paddle-ocr-rs = "0.6"
pdf-render = "1.0.0-beta.6"
ort = "=2.0.0-rc.10"
image = "0.25"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
